--- a/guestbook/pom.xml
+++ b/guestbook/pom.xml
@@ -12,10 +12,10 @@
 	<artifactId>guestbook</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>guestbook</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Guestbook</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -114,7 +114,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.1.Final</version>
 		</dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
