--- a/guestbook/src/main/resources/application.properties
+++ b/guestbook/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/guestbook
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://192.168.64.2:3306/guestbook
+spring.datasource.username=guestbook
 spring.datasource.password=
